log
Wed 10 May 2023 11:53:56 PM UTC: 
 tests:  0|4
total_score: 0/70
77d63f8
Thu 11 May 2023 12:08:23 AM UTC: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|3
total_score: 10/70
4d0ad3e
Thu 11 May 2023 12:10:32 AM UTC: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:31:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   31 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9a7d6b7
Thu 11 May 2023 12:11:23 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
5dc9730
Thu 11 May 2023 12:11:33 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:31:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   31 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
098e8e8
Thu 11 May 2023 12:12:00 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
72d87c0
Thu 11 May 2023 12:12:09 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:31:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   31 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:32:1: error: control reaches end of non-void function [-Werror=return-type]
   32 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fcdec66
Thu 11 May 2023 12:14:05 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
adff2ab
Thu 11 May 2023 12:15:26 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
4d7abcd
Thu 11 May 2023 12:27:25 AM UTC: 
 heap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  7|1
total_score: 45/70
c1f2128
Thu 11 May 2023 12:27:49 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
dec7023
Thu 11 May 2023 12:29:43 AM UTC: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  7|1
total_score: 45/70
010e0ad
Thu 11 May 2023 12:40:40 AM UTC: 
 heap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘reordenar’:
heap.c:87:48: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   87 |     else if (pq->heapArray[2*aux + 1].priority > pq->heapArray[2*aux + 1].priority) {
      |                                                ^
cc1: all warnings being treated as errors
Compilation failed
13670f5
Thu 11 May 2023 12:41:39 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘reordenar’:
heap.c:87:50: error: self-comparison always evaluates to false [-Werror=tautological-compare]
   87 |     else if (pq->heapArray[(2*aux) + 1].priority > pq->heapArray[(2*aux) + 1].priority) {
      |                                                  ^
cc1: all warnings being treated as errors
Compilation failed
d2aed66
Thu 11 May 2023 12:41:54 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
eb2d35d
Thu 11 May 2023 12:45:45 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
abcd392
Thu 11 May 2023 08:07:02 PM UTC: 
 heap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  8|0
total_score: 70/70
c62ed20
